// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton colors renders correct colors for { disabled: false, checked: false, validationState: 'default' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #444;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #444;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #aaaaaa;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  class="c0 c1"
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: false, validationState: 'default' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #444;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #444;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #aaaaaa;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
  hover="#aaaaaa"
>
  <div
    class=""
  >
    <input
      class="c2 c3"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: false, validationState: 'warning' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #c25400;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #c25400;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  class="c0 c1"
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: false, validationState: 'warning' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #c25400;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #c25400;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
  hover="#ffbf8f"
>
  <div
    class=""
  >
    <input
      class="c2 c3"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: true, validationState: 'default' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #0073b6;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #0073b6;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #83d1ff;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  checked=""
  class="c0 c1"
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: true, validationState: 'default' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #0073b6;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #0073b6;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #83d1ff;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
  hover="#83d1ff"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2 c3"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: true, validationState: 'warning' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #c25400;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #c25400;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  checked=""
  class="c0 c1"
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: true, validationState: 'warning' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #c25400;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #c25400;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
  hover="#ffbf8f"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2 c3"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: false, validationState: 'default' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #444;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #444;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #aaaaaa;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  class="c0 c1"
  disabled=""
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: false, validationState: 'default' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #444;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #444;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #aaaaaa;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
  hover="#aaaaaa"
>
  <div
    class=""
  >
    <input
      class="c2 c3"
      disabled=""
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: false, validationState: 'warning' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #c25400;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #c25400;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  class="c0 c1"
  disabled=""
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: false, validationState: 'warning' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #c25400;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #c25400;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
  hover="#ffbf8f"
>
  <div
    class=""
  >
    <input
      class="c2 c3"
      disabled=""
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: true, validationState: 'default' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #0073b6;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #0073b6;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #83d1ff;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  checked=""
  class="c0 c1"
  disabled=""
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: true, validationState: 'default' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #0073b6;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #0073b6;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #83d1ff;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
  hover="#83d1ff"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2 c3"
      disabled=""
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: true, validationState: 'warning' } 1`] = `
.c1 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c1 ~.c3 {
  border-color: #c25400;
}

.c1:focus~.c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c1:checked~.c3::before {
  background-color: #c25400;
}

.c1.c1:disabled ~.c3 {
  border-color: #c5c5c5;
}

.c1.c1:disabled:checked~.c3::before {
  background-color: #c5c5c5;
}

.c2:hover>.sc-gjcoXW>.c0:not(:disabled):not(:checked)~.c3::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

<input
  checked=""
  class="c0 c1"
  disabled=""
  id="test-radio"
  name=""
  type="radio"
/>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: true, validationState: 'warning' } 2`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c5 {
  display: flex;
  min-width: 25px;
  height: 25px;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  border-width: 3px;
  border-style: solid;
  border-radius: 50%;
  margin-right: 8px;
}

.c5::before {
  display: block;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: transparent;
  content: '';
  transition: background 0.25s linear;
}

.c3 {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

.c3 ~.c4 {
  border-color: #c25400;
}

.c3:focus~.c4 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c3:checked~.c4::before {
  background-color: #c25400;
}

.c3.c3:disabled ~.c4 {
  border-color: #c5c5c5;
}

.c3.c3:disabled:checked~.c4::before {
  background-color: #c5c5c5;
}

.c1 {
  position: relative;
  display: flex;
  align-self: flex-start;
  padding: 10px 0 10px 10px;
  margin-right: 15px;
  margin-bottom: 10px;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  text-transform: none;
}

.c1:hover>.>.c2:not(:disabled):not(:checked)~.c4::before {
  background-color: #ffbf8f;
}

@media (min-width: 768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width: 768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
  hover="#ffbf8f"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2 c3"
      disabled=""
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c4 c5 es-radio__fill"
    />
  </div>
  Option
</label>
`;
